[gd_scene load_steps=11 format=3 uid="uid://co7fk7nhg2e42"]

[ext_resource type="Script" uid="uid://dp753ysf134mp" path="res://scenes+scripts/locations/castle_2.gd" id="1_08hrb"]
[ext_resource type="PackedScene" uid="uid://b7wk6iu3uag36" path="res://scenes+scripts/player/player.tscn" id="2_7bqse"]
[ext_resource type="PackedScene" uid="uid://da865llr1mn4t" path="res://scenes+scripts/enemies/mage_enemy.tscn" id="2_vxh2w"]
[ext_resource type="PackedScene" uid="uid://b2imdda243uje" path="res://scenes+scripts/enemies/soldier_enemy.tscn" id="3_4s1fd"]
[ext_resource type="PackedScene" uid="uid://dnx606ev1bp5p" path="res://scenes+scripts/enemies/assasin_enemy.tscn" id="4_eab0f"]
[ext_resource type="PackedScene" uid="uid://co1g6ktineytf" path="res://scenes+scripts/enemies/dragon_head.tscn" id="6_srnuo"]
[ext_resource type="PackedScene" uid="uid://yix0kviu5f7m" path="res://scenes+scripts/misc/civilian.tscn" id="7_kewyb"]
[ext_resource type="PackedScene" uid="uid://b5hoxoa7cmd61" path="res://scenes+scripts/enemies/mage_boss.tscn" id="8_7bqse"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxutc"]
size = Vector2(777, 436)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08hrb"]
size = Vector2(1198, 423)

[node name="castle2" type="Node2D" node_paths=PackedStringArray("dragon", "dragonBlocks", "bossFightBlocks", "mageBoss", "startingPoint", "enterFightCollision")]
script = ExtResource("1_08hrb")
dragon = NodePath("dragonHead")
dragonBlocks = NodePath("dragonBlocks")
bossFightBlocks = NodePath("bossFightBlocks")
mageBoss = NodePath("MageBoss")
startingPoint = NodePath("start")
enterFightCollision = NodePath("enterFight/CollisionShape2D")

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -1
color = Color(0.265625, 0.231384, 0.263485, 1)
polygon = PackedVector2Array(-9728, -5816, 5664, -6639, 7269, 2524, -6075, 2292)

[node name="player" parent="." instance=ExtResource("2_7bqse")]
position = Vector2(-989, -1798)

[node name="wallCollision" type="StaticBody2D" parent="."]
collision_layer = 17
collision_mask = 17

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="wallCollision"]
polygon = PackedVector2Array(168, 151, 168, -977, -29, -1242, -29, -1484, -631, -1484, -842, -1707, -842, -1761, -842, -2028, -138, -2028, -138, -2563, 169, -2563, 717, -2563, 717, -3311, 2473, -3311, 2473, -1794, 3029, -1794, 3029, -1292, 3029, -640, 2416, 217, 1417, 839, -1765, 802, -2187, -664, -3223, -1559, -5599, -2196, -4548, -4253, -1173, -5836, 4036, -6110, 4873, -49, 3250, -644, 3250, -1277, 3250, -1763, 3250, -1794, 3250, -2237, 3002, -2237, 3001, -3735, 1479, -3735, 279, -3735, 277, -2824, -653, -2824, -653, -2575, -653, -2284, -1084, -2284, -1084, -1774, -1084, -1584, -801, -1298, -801, -1044, -276, -1044, -154, -936, -154, 56)

[node name="bossFightBlocks" type="StaticBody2D" parent="."]
position = Vector2(2285, 1053)
collision_layer = 17
collision_mask = 17

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="bossFightBlocks"]
position = Vector2(-531, 0)
polygon = PackedVector2Array(717, -3310, 717, -3292, 188, -3292, 188, -3310)
metadata/_edit_group_ = true

[node name="Polygon2D2" type="Polygon2D" parent="bossFightBlocks/CollisionPolygon2D"]
visible = false
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(187, -3312, 717, -3312, 717, -3290, 187, -3290)

[node name="Polygon2D" type="Polygon2D" parent="bossFightBlocks/CollisionPolygon2D"]
color = Color(0.709804, 0.709804, 0.709804, 1)
polygon = PackedVector2Array(188, -3310, 188, -3292, 715, -3292, 715, -3310)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="bossFightBlocks"]
polygon = PackedVector2Array(744, -2847, 965, -2847, 965, -2829, 744, -2829)

[node name="Polygon2D" type="Polygon2D" parent="bossFightBlocks/CollisionPolygon2D2"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(965, -2829, 965, -2847, 744, -2847, 744, -2829)

[node name="Polygon2D2" type="Polygon2D" parent="bossFightBlocks/CollisionPolygon2D2"]
color = Color(0.709804, 0.709804, 0.709804, 1)
polygon = PackedVector2Array(965, -2845, 965, -2831, 746, -2831, 746, -2845)

[node name="don\'tGoBackBlocks" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="don\'tGoBackBlocks"]
polygon = PackedVector2Array(-799, -1483, -631, -1483, -644, -1497, -815, -1497)

[node name="outline" type="Polygon2D" parent="don\'tGoBackBlocks/CollisionPolygon2D3"]
position = Vector2(0, -1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-817, -1497, -799, -1481, -631, -1481, -631, -1497)

[node name="doors" type="Polygon2D" parent="don\'tGoBackBlocks/CollisionPolygon2D3"]
position = Vector2(0, -1)
color = Color(0.710938, 0.710938, 0.710938, 1)
polygon = PackedVector2Array(-799, -1482, -631, -1482, -644, -1496, -815, -1496)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="don\'tGoBackBlocks"]
polygon = PackedVector2Array(-800, -1298, -800, -1482, -816, -1496, -816, -1315)

[node name="outline" type="Polygon2D" parent="don\'tGoBackBlocks/CollisionPolygon2D4"]
position = Vector2(-1, 0)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-816, -1498, -798, -1482, -798, -1299, -816, -1299)

[node name="Polygon2D" type="Polygon2D" parent="don\'tGoBackBlocks/CollisionPolygon2D4"]
position = Vector2(-1, 0)
color = Color(0.710938, 0.710938, 0.710938, 1)
polygon = PackedVector2Array(-799, -1298, -799, -1482, -815, -1496, -815, -1315)

[node name="dragonBlocks" type="StaticBody2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="dragonBlocks"]
position = Vector2(-452, 0)
polygon = PackedVector2Array(717, -3310, 717, -3292, 266, -3292, 266, -3310)
metadata/_edit_group_ = true

[node name="Polygon2D2" type="Polygon2D" parent="dragonBlocks/CollisionPolygon2D"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(264, -3312, 717, -3312, 717, -3290, 264, -3290)

[node name="Polygon2D" type="Polygon2D" parent="dragonBlocks/CollisionPolygon2D"]
color = Color(0.709804, 0.709804, 0.709804, 1)
polygon = PackedVector2Array(266, -3310, 266, -3292, 715, -3292, 715, -3310)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="dragonBlocks"]
polygon = PackedVector2Array(1479, -3736, 1497, -3736, 1497, -3312, 1479, -3312)

[node name="Polygon2D2" type="Polygon2D" parent="dragonBlocks/CollisionPolygon2D2"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(1479, -3312, 1497, -3312, 1497, -3736, 1479, -3736)

[node name="Polygon2D" type="Polygon2D" parent="dragonBlocks/CollisionPolygon2D2"]
color = Color(0.709804, 0.709804, 0.709804, 1)
polygon = PackedVector2Array(1481, -3314, 1495, -3314, 1495, -3734, 1481, -3734)

[node name="walls" type="Polygon2D" parent="."]
color = Color(0.306381, 0.0253143, 0.308594, 1)
polygon = PackedVector2Array(168, 151, 168, -977, -29, -1242, -29, -1484, -631, -1484, -842, -1707, -842, -1761, -842, -2028, -138, -2028, -138, -2563, 169, -2563, 717, -2563, 717, -3311, 2473, -3311, 2473, -1794, 3029, -1794, 3029, -1292, 3029, -640, 2416, 217, 1417, 839, -1765, 802, -2187, -664, -3223, -1559, -5599, -2196, -4548, -4253, -1173, -5836, 4036, -6110, 4873, -49, 3250, -644, 3250, -1277, 3250, -1763, 3250, -1794, 3250, -2237, 3002, -2237, 3001, -3735, 1479, -3735, 279, -3735, 277, -2824, -653, -2824, -653, -2575, -653, -2284, -1084, -2284, -1084, -1774, -1084, -1584, -801, -1298, -801, -1044, -276, -1044, -154, -936, -154, 56)

[node name="knightStartingPos" type="Marker2D" parent="."]
position = Vector2(-257, -1198)

[node name="enterFight" type="Area2D" parent="."]
position = Vector2(3015, -1946)

[node name="CollisionShape2D" type="CollisionShape2D" parent="enterFight"]
position = Vector2(-153.5, -66)
shape = SubResource("RectangleShape2D_jxutc")

[node name="dragonFight" type="Area2D" parent="."]
position = Vector2(1046, -3548)

[node name="CollisionShape2D" type="CollisionShape2D" parent="dragonFight"]
position = Vector2(-168, 24.5)
shape = SubResource("RectangleShape2D_08hrb")

[node name="center" type="Marker2D" parent="."]
position = Vector2(-415, -1264)

[node name="nextScene" type="Area2D" parent="."]
position = Vector2(4104, 307)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="nextScene"]
position = Vector2(0, -36)
polygon = PackedVector2Array(-1075, -1716, -854, -1716, -854, -1754, -1075, -1754)

[node name="shootEnemy" parent="." instance=ExtResource("2_vxh2w")]
position = Vector2(-336, -2300)

[node name="shootEnemy2" parent="." instance=ExtResource("2_vxh2w")]
position = Vector2(165, -2756)

[node name="shootEnemy3" parent="." instance=ExtResource("2_vxh2w")]
position = Vector2(188, -2655)

[node name="shootEnemy4" parent="." instance=ExtResource("2_vxh2w")]
position = Vector2(117, -2591)

[node name="shootEnemy5" parent="." instance=ExtResource("2_vxh2w")]
position = Vector2(611, -3090)

[node name="shootEnemy6" parent="." instance=ExtResource("2_vxh2w")]
position = Vector2(327, -3099)

[node name="shootEnemy7" parent="." instance=ExtResource("2_vxh2w")]
position = Vector2(2219, -3627)

[node name="shootEnemy8" parent="." instance=ExtResource("2_vxh2w")]
position = Vector2(2179, -3379)

[node name="shootEnemy9" parent="." instance=ExtResource("2_vxh2w")]
position = Vector2(2379, -3507)

[node name="shootEnemy10" parent="." instance=ExtResource("2_vxh2w")]
position = Vector2(2661, -2731)

[node name="enemy" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(-454, -2288)

[node name="enemy2" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(-434, -2198)

[node name="enemy3" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(-356, -2225)

[node name="enemy4" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(-226, -2194)

[node name="enemy5" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(-211, -2294)

[node name="enemy6" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(-289, -2399)

[node name="enemy7" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(-419, -2359)

[node name="enemy8" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(34, -2763)

[node name="enemy9" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(29, -2592)

[node name="enemy10" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(2577, -1987)

[node name="enemy11" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(2982, -2027)

[node name="enemy17" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(2864, -1989)

[node name="enemy12" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(2692, -2038)

[node name="enemy13" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(2535, -2081)

[node name="enemy15" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(2637, -2048)

[node name="enemy16" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(2689, -1973)

[node name="enemy14" parent="." instance=ExtResource("3_4s1fd")]
position = Vector2(2893, -2011)

[node name="assasinEnemy" parent="." instance=ExtResource("4_eab0f")]
position = Vector2(-38, -2687)

[node name="assasinEnemy3" parent="." instance=ExtResource("4_eab0f")]
position = Vector2(453, -3009)

[node name="assasinEnemy4" parent="." instance=ExtResource("4_eab0f")]
position = Vector2(2527, -2844)

[node name="assasinEnemy5" parent="." instance=ExtResource("4_eab0f")]
position = Vector2(2815, -2844)

[node name="dragonHead" parent="." instance=ExtResource("6_srnuo")]
position = Vector2(1152, -3597)
size = 12

[node name="dragonHead2" parent="." instance=ExtResource("6_srnuo")]
position = Vector2(2673, -3534)
size = 2

[node name="civilian" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(-997, -2190)

[node name="civilian2" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(-807, -2190)

[node name="civilian3" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(-935, -2129)

[node name="civilian4" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(-904, -2202)

[node name="civilian5" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(-831, -2098)

[node name="civilian6" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2759, -1963)

[node name="civilian7" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2979, -1908)

[node name="civilian8" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(3101, -1926)

[node name="civilian9" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2887, -1926)

[node name="civilian10" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2740, -1883)

[node name="civilian11" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2651, -1903)

[node name="civilian12" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2531, -1930)

[node name="civilian13" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2548, -1864)

[node name="civilian14" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2829, -1924)

[node name="civilian15" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2899, -1880)

[node name="civilian16" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2958, -1966)

[node name="civilian17" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(3024, -1872)

[node name="civilian18" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(3105, -1866)

[node name="civilian19" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(3172, -1992)

[node name="civilian20" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2854, -3552)

[node name="civilian21" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2646, -3638)

[node name="civilian22" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2726, -3302)

[node name="civilian23" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2634, -3449)

[node name="civilian24" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2824, -3492)

[node name="civilian25" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(2714, -3529)

[node name="civilian26" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(-549, -2688)

[node name="civilian27" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(-428, -2648)

[node name="civilian28" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(-489, -2587)

[node name="civilian29" parent="." instance=ExtResource("7_kewyb")]
position = Vector2(-435, -2755)

[node name="MageBoss" parent="." instance=ExtResource("8_7bqse")]
position = Vector2(1254, -2003)

[node name="start" type="Marker2D" parent="."]
position = Vector2(2861, -2012)

[connection signal="body_entered" from="enterFight" to="." method="_on_enter_fight_body_entered"]
[connection signal="body_exited" from="enterFight" to="." method="_on_enter_fight_body_exited"]
[connection signal="body_entered" from="dragonFight" to="." method="_on_dragon_fight_body_entered"]
[connection signal="body_entered" from="nextScene" to="." method="_on_next_scene_body_entered"]
